package com.example.mybagrutapp;

import android.os.Bundle;

import androidx.appcompat.app.AppCompatActivity;

public class addPlayer extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_add_player);
    }
}